src/IconWithOptions/IconWithOptions.scss
@import '../common';

.wrapper {
  position: relative;
  display: flex;
  justify-content: center;
  z-index: 0;

  &.hover .icon-wrapper {
    svg path {
      fill: $B10;
    }
  }
}

.icon-wrapper {
  display: flex;
  justify-content: center;
  margin-bottom: 20px;
}

.dropdown-layout {
  display: block;
  position: absolute;
  width: 130px;
  bottom: 0.9em;

  &.drop-direction-up {
    bottom: 3.6em;
  }
}

